@@ -8,6 +8,8 @@ versions of PyAMF.
 
 0.6 (unreleased)
 ----------------
+ - Empty Django relations are now encoded as ``None``, not ``pyamf.Undefined``
+   (Ticket:659)
 
 0.5.1 (2009-09-19)
 ------------------
